@@ -1,16 +1,15 @@
 package com.pisicilesalbatice.ams.Service;
 
+import com.pisicilesalbatice.ams.Exceptions.Exceptions.OptionalNotFoundException;
+import com.pisicilesalbatice.ams.Exceptions.Exceptions.OptionalServiceException;
+import com.pisicilesalbatice.ams.Exceptions.Exceptions.StudentNotFoundException;
+import com.pisicilesalbatice.ams.Exceptions.Exceptions.YearSpecialityNotFoundException;
 import com.pisicilesalbatice.ams.Model.*;
-import com.pisicilesalbatice.ams.Repository.OptionalRatingRepository;
-import com.pisicilesalbatice.ams.Repository.ProposedOptionalRepository;
-import com.pisicilesalbatice.ams.Repository.StudentRepository;
-import com.pisicilesalbatice.ams.Repository.YearSpecialityRepository;
-import org.springframework.http.HttpStatus;
+import com.pisicilesalbatice.ams.Repository.*;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
 
-import java.util.List;
-import java.util.Set;
+import java.time.LocalTime;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -19,48 +18,48 @@ public class OptionalService
 {
     private final StudentRepository studentRepository;
     private final YearSpecialityRepository yearSpecialityRepository;
-    private final ProposedOptionalRepository proposedOptionalRepository;
     private final OptionalRatingRepository optionalRatingRepository;
+    private final AcceptedOptionalRepository acceptedOptionalRepository;
 
-    public OptionalService(StudentRepository studentRepository, YearSpecialityRepository yearSpecialityRepository, ProposedOptionalRepository proposedOptionalRepository, OptionalRatingRepository optionalRatingRepository)
+    public OptionalService(StudentRepository studentRepository, YearSpecialityRepository yearSpecialityRepository, OptionalRatingRepository optionalRatingRepository, AcceptedOptionalRepository acceptedOptionalRepository)
     {
         this.studentRepository = studentRepository;
         this.yearSpecialityRepository = yearSpecialityRepository;
-        this.proposedOptionalRepository = proposedOptionalRepository;
         this.optionalRatingRepository = optionalRatingRepository;
+        this.acceptedOptionalRepository = acceptedOptionalRepository;
     }
 
-    public List<ProposedOptional> getProposedOptionals(Integer year_id)
+    public List<Course> getAcceptedOptionals(Integer year_id)
     {
-        // todo: error handling for missing year id or student id
-        YearSpeciality year = this.yearSpecialityRepository.findById(year_id).get();
+        YearSpeciality year = getYearSpeciality(year_id);
 
-        return year.getProposedOptionals().stream().toList();
+        // Get the accepted optionals of the year speciality with the given id
+        return year.getCourses().stream().filter(Course::isOptional).collect(Collectors.toList());
     }
 
-    public void setOptionalRatings(Integer studentID, Integer yearSpecialityID, List<Pair<Integer, Integer>> ratings)
+    public void setOptionalRatings(Integer studentID, Integer yearSpecialityID, java.sql.Date receivedDate, java.sql.Time receivedTime, List<Pair<Integer, Integer>> ratings)
     {
         // Insert the given optional courses ratings into the optional rating table
         // param studentID: ID of student
         // param yearSpecialityID: ID of the speciality (used for validation)
         // param list: list of <ProposedOptionalID, Rating> which will be used in the insertion
 
-        // todo: check if the ids are valid
-        Student student = studentRepository.findById(studentID).get();
-        YearSpeciality yearSpeciality = yearSpecialityRepository.findById(yearSpecialityID).get();
-        Set<Integer> optionalIDs = yearSpeciality.getProposedOptionals().stream().map(ProposedOptional::getOptionalId).collect(Collectors.toSet());
+        Student student = getStudent(studentID);
+        YearSpeciality yearSpeciality = getYearSpeciality(yearSpecialityID);
+        Set<Integer> optionalIDs = yearSpeciality.getCourses().stream().filter(Course::isOptional).map(Course::getCourseId).collect(Collectors.toSet());
 
         // check if the optionals belong to the year speciality
         ratings.forEach(pair -> {
             if(!optionalIDs.contains(pair.getLeft())) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, "Rating with ID " + pair.getLeft() + " does not belong to the year speciality with ID " + yearSpecialityID);
+                throw new OptionalServiceException("Rating with ID " + pair.getLeft() + " does not belong to the year speciality with ID " + yearSpecialityID);
             }
         });
 
         // check if the user send the ratings to all the optionals for that year speciality
         Set<Integer> ratingOptionalIDs = ratings.stream().map(Pair::getLeft).collect(Collectors.toSet());
-        if(!optionalIDs.containsAll(ratingOptionalIDs) || ratingOptionalIDs.containsAll(optionalIDs)) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "Ratings from student " + studentID + " are incomplete!");
+        System.out.println(ratingOptionalIDs);
+        if(!optionalIDs.containsAll(ratingOptionalIDs) || !ratingOptionalIDs.containsAll(optionalIDs)) {
+            throw new OptionalServiceException("Ratings from student " + studentID + " are incomplete!");
         }
 
         // Check if the ordering is correct (it is a set consisting of 1...len_ordering)
@@ -69,16 +68,81 @@ public class OptionalService
         System.out.println(initialOrder);
         System.out.println(receivedOrder);
         if(!initialOrder.containsAll(receivedOrder) || !receivedOrder.containsAll(initialOrder)) {
-            throw new ResponseStatusException(HttpStatus.CONFLICT, "Ratings are incorrect");
+            throw new OptionalServiceException("Ratings are incorrect");
         }
 
         // add the ratings to the database
         ratings.forEach(pair -> {
-            Integer proposedOptionalID = pair.getLeft();
+            Integer acceptedOptionalId = pair.getLeft();
             Integer position = pair.getRight();
-            ProposedOptional proposedOptional = proposedOptionalRepository.getById(proposedOptionalID);
-            OptionalRating optionalRating = new OptionalRating(student, proposedOptional, position);
+            AcceptedOptional acceptedOptional = getAcceptedOptional(acceptedOptionalId);
+            OptionalRating optionalRating = new OptionalRating(student, acceptedOptional, position, receivedDate, receivedTime);
             optionalRatingRepository.save(optionalRating);
         });
     }
+
+    private YearSpeciality getYearSpeciality(Integer yearSpecialityID)
+    {
+        Optional<YearSpeciality> yearSpecialityOptional = this.yearSpecialityRepository.findById(yearSpecialityID);
+        if(yearSpecialityOptional.isEmpty()) {
+            throw new YearSpecialityNotFoundException("No year speciality with id " + yearSpecialityID + " was found");
+        }
+        return yearSpecialityOptional.get();
+    }
+
+    private Student getStudent(Integer studentID)
+    {
+        Optional<Student> studentOptional = this.studentRepository.findById(studentID);
+        if(studentOptional.isEmpty()) {
+            throw new StudentNotFoundException("No student with id " + studentID + " was found");
+        }
+        return studentOptional.get();
+    }
+
+    private AcceptedOptional getAcceptedOptional(Integer optionalId)
+    {
+        Optional<AcceptedOptional> acceptedOptional = this.acceptedOptionalRepository.findById(optionalId);
+        if(acceptedOptional.isEmpty())
+        {
+            throw new OptionalNotFoundException("No accepted optional with id " + optionalId + " was found");
+        }
+        return acceptedOptional.get();
+    }
+
+//    public void DELETE_THIS()
+//    {
+//        // 1
+//        // 2
+//        // 2002
+//        // 2003
+//
+//        // 1
+//        // 2
+//        // 4
+//        // 5
+//        // 6
+//        // 7
+//        // 8
+//        // 10
+//        List<Integer> numbers = List.of(1, 2, 4, 5, 6, 7, 8, 10);
+//        List<Integer> optionals = List.of(9, 10);
+//        List<Integer> choices = new java.util.ArrayList<>(List.of(1, 2));
+//        for(int studentId = 11; studentId <= 60; ++studentId)
+//        {
+//            List<Pair<Integer, Integer>> ratings = new ArrayList<>();
+//            for(int i = 0; i < 2; ++i)
+//            {
+//                ratings.add(new Pair<>(optionals.get(i), choices.get(i)));
+//            }
+//            this.setOptionalRatings(studentId, 1, new java.sql.Date(System.currentTimeMillis()), java.sql.Time.valueOf(LocalTime.now()), ratings);
+//            Collections.shuffle(choices);
+//            try
+//            {
+//                Thread.sleep(1005);
+//            } catch (InterruptedException e)
+//            {
+//                e.printStackTrace();
+//            }
+//        }
+//    }
 }
